tests/compile_fail/invalid_options.zig
const tracepoints = @import("linux_tracepoints");

comptime {
    _ = tracepoints.provider.Provider(.{
        .name = "Valid",
        .options = "invalid",
        .events = &.{.{ .symbol = "event", .level = 4 }},
    });
}
